--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
-@import url("./_normalize.css");
-@import url("./_global.css");
-@import url("./_fonts.css");
-@import url("./_overall.css");
+@import url("/css/_normalize.css");
+@import url("/css/_global.css");
+@import url("/css/_fonts.css");
+@import url("/css/_overall.css");
 
 /***********Header*********/
 .header {
