--- a/css/style.css
+++ b/css/style.css
@@ -301,13 +301,22 @@
 .bouquet__block {
   margin: 0 16px;
   width: calc(100% / 3 - 32px);
-  padding-bottom: 40px;
+  /* padding-bottom: 40px; */
 }
 
 .bouquet_wrapperImg {
   width: 100%;
   height: 60%;
   min-height: 300px;
+  position: relative;
+}
+
+.bouquet_wrapperImg--link {
+  top: 0;
+  left: 0;
+  position: absolute;
+  width: 100%;
+  height: 100%;
 }
 
 .bouquet_wrapperImg img {
@@ -338,7 +347,6 @@
   .bouquet__block {
     margin: 0 16px;
     width: calc(100% / 2 - 32px);
-    padding-bottom: 40px;
   }
 }
 
