--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,13 @@
   margin: 0 16px;
 }
 
+.headerConnectionItem__phoneNumber {
+  font-family: "Montserrat", serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 19px;
+}
+
 /*********** POPUP**********/
 
 .popUp__container {
@@ -324,9 +331,11 @@
 }
 
 .bouquet__block {
-  margin: 0 16px;
+  margin-left: 16px;
+  margin-right: 16px;
   width: calc(100% / 3 - 32px);
-  /* padding-bottom: 40px; */
+  position: relative;
+  margin-bottom: 32px;
 }
 
 .bouquet_wrapperImg {
@@ -342,12 +351,16 @@
   position: absolute;
   width: 100%;
   height: 100%;
+  z-index: 5;
 }
 
 .bouquet_wrapperImg img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  position: absolute;
+  left: 0;
+  top: 0;
 }
 
 .our__bouquets--title {
@@ -368,9 +381,21 @@
   padding: 30px 0;
 }
 
+.footer__text {
+  font-family: "Montserrat", serif;
+  font-weight: 400;
+  font-size: 16px;
+
+  width: 70%;
+  text-align: center;
+  margin: 0 auto;
+  margin-bottom: 70px;
+}
+
 @media screen and (max-width: 900px) {
   .bouquet__block {
-    margin: 0 16px;
+    margin-left: 16px;
+    margin-right: 16px;
     width: calc(100% / 2 - 32px);
   }
 }
@@ -460,6 +485,10 @@
 
   .adv__card--img {
     margin-right: 28px;
+  }
+
+  .adv__card--title {
+    margin-bottom: 6px;
   }
 
   .bouquet__block {
