--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,34 @@
   line-height: 19px;
 }
 
+/**********Thank you**********/
+.popUp__thanks {
+  background-color: rgba(224, 224, 224, 1);
+  width: auto;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  z-index: 5;
+  transform: translate(-50%, -50%);
+  padding: 50px;
+  text-align: center;
+}
+
+.close__thankyou {
+  display: none;
+}
+
 /*********** POPUP**********/
+
+.disable__scroll {
+  position: relative;
+  overflow: hidden;
+  height: 100vh;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+}
 
 .popUp__container {
   position: absolute;
@@ -151,7 +178,7 @@
   width: 100%;
   height: 100%;
   background-color: rgba(51, 51, 51, 0.5);
-  background-image: url("../img/yy3.gif");
+  background-image: url("../img/VAyR.gif");
   background-repeat: no-repeat;
   background-position: center;
   left: 0;
@@ -181,6 +208,11 @@
   transition: 0.2s;
 }
 
+.error__form {
+  box-shadow: 0 0 10px #ff0000;
+  transition: 0.2s;
+}
+
 .popUp__form--text {
   margin-bottom: 28px;
 }
@@ -190,6 +222,15 @@
   -moz-appearance: textfield;
   -webkit-appearance: textfield;
   appearance: textfield;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
 }
 
 .popUp__form--textarea {
@@ -336,6 +377,12 @@
   width: calc(100% / 3 - 32px);
   position: relative;
   margin-bottom: 32px;
+  transition: transform 0.2s;
+}
+
+.bouquet__block:hover {
+  transform: scale(1.05);
+  transition: transform 0.2s;
 }
 
 .bouquet_wrapperImg {
