--- a/css/bouquets/bouquet1.css
+++ b/css/bouquets/bouquet1.css
@@ -1,8 +1,8 @@
-@import url("/css/normalize.css");
-@import url("/css/global.css");
-@import url("/css/fonts.css");
-@import url("/css/overall.css");
-@import url("/css/style.css");
+@import url("../normalize.css");
+@import url("../global.css");
+@import url("../fonts.css");
+@import url("../overall.css");
+@import url("../style.css");
 
 .wrapper {
   display: flex;
