--- a/css/bouquets/bouquet1.css
+++ b/css/bouquets/bouquet1.css
@@ -2,7 +2,7 @@
 @import url("../global.css");
 @import url("../fonts.css");
 @import url("../overall.css");
-@import url("../style.css");
+@import url("../style.cssgit ");
 
 .wrapper {
   display: flex;
