--- a/css/style.css
+++ b/css/style.css
@@ -3,54 +3,7 @@
 @import url("fonts.css");
 @import url("overall.css");
 
-/***********Header*********/
-.header__firstScreen {
-  background-image: url("../img/backgroundRight.jpg"),
-    url("../img/backgroundLeft.jpg");
-  background-repeat: no-repeat, no-repeat;
-  background-position: right, left;
-  background-size: contain;
-}
-
-.header__wrapper {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  padding: 15px 0;
-}
-
-.header__connection {
-  display: flex;
-  align-items: center;
-}
-
-.headerConnection__imgLink {
-  display: flex;
-  justify-content: space-between;
-  margin: 0 -8px;
-  align-items: center;
-}
-
-.headerConnection__link img {
-  transition: 0.3s;
-}
-
-.headerConnection__link:hover .svg__change {
-  fill: #57adac;
-  transition: 0.3s;
-  /* opacity: 0.5; */
-}
-
-.headerConnection__item {
-  margin: 0 16px;
-}
-
-.headerConnectionItem__phoneNumber {
-  font-family: "Montserrat", serif;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 19px;
-}
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital@1&display=swap");
 
 /**********Thank you**********/
 .popUp__thanks {
@@ -251,6 +204,55 @@ input::-webkit-inner-spin-button {
   cursor: pointer;
 }
 
+/***********Header*********/
+.header__firstScreen {
+  background-image: url("../img/backgroundRight.jpg"),
+    url("../img/backgroundLeft.jpg");
+  background-repeat: no-repeat, no-repeat;
+  background-position: right, left;
+  background-size: contain;
+}
+
+.header__wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 15px 0;
+}
+
+.header__connection {
+  display: flex;
+  align-items: center;
+}
+
+.headerConnection__imgLink {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 -8px;
+  align-items: center;
+}
+
+.headerConnection__link img {
+  transition: 0.3s;
+}
+
+.headerConnection__link:hover .svg__change {
+  fill: #57adac;
+  transition: 0.3s;
+  /* opacity: 0.5; */
+}
+
+.headerConnection__item {
+  margin: 0 16px;
+}
+
+.headerConnectionItem__phoneNumber {
+  font-family: "Montserrat", serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 19px;
+}
+
 /**********first************/
 
 .firstScreen__wrapper {
@@ -268,10 +270,11 @@ input::-webkit-inner-spin-button {
 
 .firstScreen__title {
   font-family: "PlayfairDisplay", serif;
-  font-weight: 700;
+  font-weight: 500;
   color: #545454;
-  font-size: 55px;
-  line-height: 68px;
+  font-style: italic;
+  font-size: 68px;
+  line-height: 80px;
   margin-bottom: 32px;
 }
 
@@ -365,6 +368,32 @@ input::-webkit-inner-spin-button {
   line-height: 66px;
   margin-bottom: 50px;
   font-weight: 500;
+  font-style: italic;
+  position: relative;
+}
+
+.our__bouquets::before {
+  content: "";
+  width: 20%;
+  height: 1px;
+  background-color: #545454;
+  display: inline-block;
+  position: absolute;
+  left: 10%;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.our__bouquets::after {
+  content: "";
+  width: 20%;
+  height: 1px;
+  background-color: #545454;
+  display: inline-block;
+  position: absolute;
+  right: 10%;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 .bouquets__container {
@@ -413,8 +442,8 @@ input::-webkit-inner-spin-button {
 }
 
 .our__bouquets--title {
-  font-weight: 700;
-  font-style: 20px;
+  font-weight: 400;
+  font-size: 20px;
   margin-top: 24px;
   margin-bottom: 16px;
 }
@@ -444,6 +473,16 @@ input::-webkit-inner-spin-button {
     margin-left: 16px;
     margin-right: 16px;
     width: calc(100% / 2 - 32px);
+  }
+
+  .our__bouquets::before {
+    width: 20%;
+    left: 7%;
+  }
+
+  .our__bouquets::after {
+    width: 20%;
+    right: 7%;
   }
 }
 
@@ -544,8 +583,12 @@ input::-webkit-inner-spin-button {
   }
 
   .firstScreen__title {
-    font-size: 30px;
+    font-size: 35px;
     line-height: 40px;
+  }
+
+  .firstScreenContent__text {
+    font-size: 16px;
   }
 
   .header__logo {
@@ -581,6 +624,24 @@ input::-webkit-inner-spin-button {
   }
 
   .adv__card {
+  }
+
+  .our__bouquets {
+    font-size: 35px;
+  }
+
+  .our__bouquets::before {
+    width: 160px;
+    left: 50%;
+    top: 115%;
+    transform: translateX(-50%);
+  }
+
+  .our__bouquets::after {
+    width: 160px;
+    right: 50%;
+    top: -13%;
+    transform: translateX(50%);
   }
 
   .adv__card {
