--- a/css/style.css
+++ b/css/style.css
@@ -466,6 +466,7 @@ input::-webkit-inner-spin-button {
   width: 70%;
   margin: 0 auto;
   margin-bottom: 70px;
+  text-align: center;
 }
 
 @media screen and (max-width: 900px) {
